# open_synera

./: .gitignore  CMakeLists.txt
.github/workflows/: ci-201720.yml  ci-416918.yml  ci-481174.yml
assets/shaders/: mesh.frag.spv  mesh.vert.spv  overlay.frag.spv  overlay.vert.spv  pixel_resolve.frag.spv  sprite.frag.spv  sprite.vert.spv  triangle.vert.spv
engine/include/Engine/Animation/: Animator.h
engine/include/Engine/Asset/: AssetHandle.h  AssetManager.h
engine/include/Engine/Core/: Assert.h  Log.h
engine/include/Engine/Effects/: ParticleSystem.h
engine/include/Engine/Input/: Input.h
engine/include/Engine/Math/: CameraRay.h  Ray.h
engine/include/Engine/Platform/: Window.h
engine/include/Engine/Renderer/: Camera.h  Material.h  MaterialLibrary.h  Mesh.h  OverlayRenderItem.h  PixelRenderConfig.h  RenderItem.h  SpriteRenderItem.h  Vertex.h
engine/include/Engine/Scene/: Scene.h  Transform.h
engine/src/Animation/: Animator.cpp
engine/src/Asset/: AssetManager.cpp
engine/src/Effects/: ParticleSystem.cpp
engine/src/Input/: Input.cpp
engine/src/Math/: CameraRay.cpp
engine/src/Platform/: Window.cpp
engine/src/Renderer/: Camera.cpp  Material.cpp  MaterialLibrary.cpp  Mesh.cpp
engine/src/Renderer/Vulkan/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanFullscreenPass.cpp  VulkanImage.cpp  VulkanMesh.cpp  (+8 more)
engine/src/Scene/: Scene.cpp
game/src/: AutoChessGame.cpp  AutoChessGame.h  BattleSystem.cpp  BattleSystem.h  BoardSystem.cpp  BoardSystem.h  BoardVisualLayer.cpp  BoardVisualLayer.h  DamageNumberLayer.cpp  DamageNumberLayer.h  EffectSystem.cpp  EffectSystem.h  EffectVisualLayer.cpp  EffectVisualLayer.h  UnitSystem.cpp  UnitSystem.h  main.cpp
shaders/: fullscreen.vert  mesh.frag  mesh.vert  overlay.frag  overlay.vert  pixel_resolve.frag  sprite.frag  sprite.vert  triangle.vert
(+16 files in other folders)
